--- a/product1.html
+++ b/product1.html
@@ -85,8 +85,8 @@
             </div>
             <div class="product-right">
                 <div class="product">
-                    <a href="product1.jpg">
-                        <img src="product1.jpg" alt="Product1">
+                    <a href="/images/product1.jpg">
+                        <img src="/images/product1.jpg" alt="Product1">
                     </a>
                 </div>
                 <div class="product-price">
