--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Labrada&family=Mynerve&family=Prompt&display=swap"
         rel="stylesheet">
-        <title>DIY Website</title>
+        <title>blackDOT</title>
     </head>
     
     <body>
@@ -32,8 +32,10 @@
                             <i class="fa fa-caret-down"></i>
                         </div>
                         <div class="myaccount-content">
-                            <a href="#" class="Signin">Sign In</a>
-                            <a href="#" class="Signup">Sign Up</a>
+                            <!-- <a href="account.html" class="Signin">Sign In</a>
+                            <a href="account.html" class="Signup">Sign Up</a> -->
+                            <span class="Signin">Sign In</span>
+                            <span class="Signup">Sign Up</span>
                         </div>
                     </div>
                 </li>
